examples/invalid/brace_block.lby
fn main -> i64
{
    1
}
